# pyDISC

./: README.md  pyproject.toml
src/pydisc/: DISC.py  __init__.py  __main__.py
