[project]
name = "pyDISC"
description = "Time series jumps idealization with DISC."
dynamic = ["version"]
license = {text = "MIT"}
authors = [
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
]
requires-python = ">=3.9, <3.12"
dependencies = [
    "numpy<2",
    "scipy",
    "scikit-learn",
    "pomegranate>=1.1.1",
    "qtpy",
    "qtawesome",
    "pyqtgraph-ext>=1.2.6",
    "zarr",
]
readme = "README.md"
keywords = ["time series", "idealization", "DISC", "PyQt", "PySide"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


[project.urls]
homepage = "https://github.com/marcel-goldschen-ohm/pyDISC"
repository = "https://github.com/marcel-goldschen-ohm/pyDISC"


[project.scripts]
pydisc = "pydisc.__main__:main"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"


[tool.pdm.version]
source = "scm"
